# zhtw-mcp

./: Cargo.toml  README.md
assets/: ruleset.json
benches/: scanner.rs
docs/: cli.md  internals.md  mcp.md  rules.md
scripts/: check-ruleset.py  measure-tokens.py  test-mcp-qwen.py
src/: config.rs  fixer.rs  main.rs
src/engine/: s2t.rs  segment.rs  translate.rs
src/engine/scan/: grammar.rs  mod.rs  punctuation.rs  spelling.rs
src/mcp/: prompts.rs  sampling.rs  setup.rs  tools.rs  transport.rs  transport_async.rs  types.rs
src/rules/: ruleset.rs  store.rs
tests/: anchor_benchmark.rs  cli_lint.rs  e2e_mcp.rs  fix_tier_benchmark.rs  scanner_integration.rs  vocabulary_expansion.rs
